<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/title_help" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="300"
        android:title="@string/title_info"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/title_logout"
        android:showAsAction="never" />

</menu>