<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primary"
            android:src="@drawable/labelme_logo" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/primary"
            android:elevation="2dp"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/accent"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/primary"
            android:elevation="2dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/accent"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/primary"
            android:elevation="2dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/accent"
            android:textColorHint="@color/hint" />

        <!-- Login button -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/button"
            android:elevation="2dp"
            android:text="@string/btn_login"
            android:textColor="@color/accent" />

        <!-- Link to register screen -->
        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/primary"
            android:gravity="center"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>