<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/fields_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:background="@color/background"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="@color/background"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:elevation="1dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="@color/background"
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="16dp"
            android:elevation="1dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <!-- Login button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/accent"
            android:elevation="2dp"
            android:text="@string/btn_login"
            android:textColor="@color/text" />

        <!-- Link to register screen -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/link_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/link_signup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textColor="@color/primary"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>