<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/personal_details"
            android:textColor="@color/primary_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hint_email"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/secondary_text"
            android:textSize="18sp" />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/change_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:text="@string/change_password"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/hint_name"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_name"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/secondary_text"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>