<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="8dp"
    android:background="@color/background"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp"
            android:layout_toRightOf="@id/thumbnail"
            android:orientation="vertical"
            android:padding="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/label_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_title"
                    android:layout_marginLeft="8dp"
                    android:maxLines="2"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/author_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_author"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/author_title"
                    android:layout_marginLeft="8dp"
                    android:maxLines="1"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_title"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rating_title"
                    android:layout_marginLeft="8dp"
                    android:maxLines="1"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/vote"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:layout_alignEnd="@+id/thumbnail"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/thumbnail"
            android:layout_below="@+id/thumbnail"
            android:text="@string/btn_vote"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
